Sat Jun 30 21:48:08 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Set the destination ID to packet stream as SKE responder
	  if ID was present in key exchange packet.  Affected file
	  is lib/silcske/silcske.[ch].

	* Handle also zero timeouts in the scheduler notify callback
	  to avoid problems with SILC Plugin.  Affected file is
	  apps/irssi/src/silc/core/silc-core.c.

Thu Jun 28 19:19:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1.1.

Sun Jun 24 18:47:55 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1.1.

	* Compile sources with _GNU_SOURCE on Linux systems.  Affected
	  file is configure.ad.

Sun Jun 24 16:33:59 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed Unix signal task dispatching to not lock the signals
	  when dispatching the callback to avoid deadlocks.  Affected
	  file is lib/silcutil/unix/silcunixschedule.c.

Sun Jun 24 14:43:21 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Fix configure output for with-plugin.  Affected file is
	  apps/irssi/configure.ad

Tue Jun 19 17:05:48 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_VERSION macro for checking package versions at
	  compile time.  Affected files are configure.ad,
	  includes/silc.h.in and includes/silcversion.h.in.

Mon Jun 18 23:47:22 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Use SILC_VERIFY to assert that silc_rwlock_wrlock can be
	  called only once per thread on Unix.  Affected file is
	  lib/silcutil/unix/silcunixthread.c.  Added same for mutex
	  as well.   Documented same on the API in 
	  lib/silcutil/silcmutex.h.

	* Fixed USERS command reply write-lock unlocking.  Affected file
	  is lib/silcclient/command_reply.c.

Mon Jun 18 08:14:26 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_create_key_pair to check for valid identifier.
	  Affected file is lib/silcapputil/silcapputil.c.

Sun Jun 17 20:08:26 CEST 2007  Jochen Eisinger <coffee@silcnet.org>
