@@ -1,3 +1,12 @@
+Sun Jul  1 12:40:06 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added support for rekey with PFS when using CTR mode
+	  encryption.  Affected file is lib/silcske/silcske.c.
+
+	* Added silc_idcache_move that can be used to move entries
+	  between caches.  Affected files are
+	  lib/silcapputil/silcidcache.[ch].
+
 Sat Jun 30 21:48:08 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Set the destination ID to packet stream as SKE responder
